# cpp-tiktoken

./: .gitmodules  CMakeLists.txt  License.md  README.md  byte_pair_encoding.cc  byte_pair_encoding.h  common.h  embedded_resource_reader.cc  embedded_resource_reader.h  emdedded_resource_reader.cc  emdedded_resource_reader.h  encoding.cc  encoding.h  encoding_utils.cc  encoding_utils.h  modelparams.cc  modelparams.h  pcre2_regex.cc  pcre2_regex.h
cmake/: resources.cmake
support/cmake/: tiktokenConfig.cmake
tools/: file2cpp.py
ut/: CMakeLists.txt  tests.cpp
ut/cmake/: gtest.cmake
